# superchain-ops

./: .env  .foundryrc  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  EOA.md  LICENSE  NESTED-VALIDATION.md  NESTED.md  NESTED_EXECUTION.md  OP-SEPOLIA-GAS-PARAMS.md  PRESIGNED-PAUSE.md  README.md  SIMULATE_SEQ.md  SINGLE-VALIDATION.md  SINGLE.md  SignAndCheck.s.sol  anvil.sh  c.txt  eoa.just  foundry.toml  go.mod  go.sum  justfile  mise.toml  nested  nested.just  presigned-pause.just  remappings.txt  single  single.just
.circleci/: config.yaml  config.yml  github-event-handler.yml
.github/: CODEOWNERS  (+1 more)
cli/: Makefile  (+4 more)
src/script/devnet-gen/: README.md  cli.py  networks.py  pyproject.toml  rpc.py  writer.py
src/script/devnet-gen/adapters/: __init__.py  _opcm.py  base.py  opcm_migrate_v800.py  opcm_upgrade_v600.py  opcm_upgrade_v800.py
src/script/devnet-gen/devnet/: __init__.py  descriptor.py  loader.py
src/script/devnet-gen/templates/: README.md.j2  VALIDATION.md.j2
src/script/devnet-gen/tests/: conftest.py  test_adapter_migrate_v800.py  test_adapter_v600.py  test_adapter_v800.py  test_cli.py  test_loader.py  test_opcm_helpers.py  test_rpc.py  test_writer.py
src/script/devnet-gen/tests/fixtures/devnets/freya-u16/: manifest.yaml
src/script/devnet-gen/tests/fixtures/devnets/freya-u16/freya-u16-0/: chain.yaml
src/script/devnet-gen/tests/fixtures/devnets/freya-u16/freya-u16-1/: chain.yaml
src/script/devnet-gen/tests/fixtures/devnets/freya-u16/op-deployer/: state.json
src/script/devnet-gen/tests/fixtures/devnets/freya-u16/op-program/: prestates.json
(+3352 files in other folders)
