[project]
name = "devnet-gen"
version = "0.1.0"
description = "Generates superchain-ops devnet task directories from a devnet descriptor."
requires-python = ">=3.11"
# Direct dependencies are pinned exactly. Transitive deps are pinned with
# hashes in uv.lock — installed via `uv sync --frozen`.
dependencies = [
    "pyyaml==6.0.3",
    "tomli_w==1.2.0",
    "jinja2==3.1.6",
]

[dependency-groups]
dev = ["pytest==9.0.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

# devnet-gen is run as a script, not installed as a package. Tell uv this is a
# "non-package" project so it doesn't try to build a wheel.
[tool.uv]
package = false
